--- a/FACE/face.html
+++ b/FACE/face.html
@@ -27,7 +27,7 @@
             <div class="two">
                 <img src="./images/face-01.jpeg" alt="">
                 <h2>ROSE AS FACE OF APNMTC</h2>
-                    <button><a href="https://paystack.com/pay/kkz-ddcstz"> VOTE</a></button>
+                    <button><a href=""> VOTE</a></button>
             </div>
 
             <div class="two">
